--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /Vaccine Distribution System/VaccineDistrubutionSystem/nbproject/private/
 /Vaccine Distribution System/VaccineDistrubutionSystem/build/
+/Vaccine Distribution System/VaccineDistrubutionSystem/dist/
