--- a/Vaccine Distribution System/VaccineDistrubutionSystem/nbproject/project.properties
+++ b/Vaccine Distribution System/VaccineDistrubutionSystem/nbproject/project.properties
@@ -30,12 +30,14 @@ excludes=
 file.reference.AbsoluteLayout.jar=AbsoluteLayout.jar
 file.reference.db4o-8.0.184.15484-all-java5.jar-1=db4o-8.0.184.15484-all-java5.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\India\\Downloads\\lib\\jcalendar-1.4.jar
+file.reference.KControls.jar=C:\\Users\\India\\Downloads\\KControls.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.db4o-8.0.184.15484-all-java5.jar-1}:\
     ${file.reference.AbsoluteLayout.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.KControls.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
