--- a/Vaccine Distribution System/VaccineDistrubutionSystem/nbproject/private/private.properties
+++ b/Vaccine Distribution System/VaccineDistrubutionSystem/nbproject/private/private.properties
@@ -7,4 +7,4 @@ javadoc.preview=true
 
 user.properties.file=C:\\Users\\India\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
-user.properties.file=C:\\Users\\India\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\dharm\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
